[gd_scene load_steps=11 format=3 uid="uid://dpe56usoi8ynv"]

[ext_resource type="Texture2D" uid="uid://bgbtg2hmh425o" path="res://assets/sprites/enemies/mURHAAJA.png" id="1_3nn7b"]
[ext_resource type="Script" path="res://scripts/enemy_scripts/murhaaja.gd" id="1_hcf1o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qsu6i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3nn7b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7l5o8"]
radius = 22.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h6gdc"]
radius = 22.0
height = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gpmj"]
size = Vector2(174, 154)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1l3bk"]
radius = 77.0
height = 174.0

[sub_resource type="Animation" id="Animation_ysglm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qst5d"]
resource_name = "hurt"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3mmc"]
_data = {
"RESET": SubResource("Animation_ysglm"),
"hurt": SubResource("Animation_qst5d")
}

[node name="mURHAAJA" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource("1_hcf1o")
health = 3
max_health = 3
damage = 1

[node name="Graphics" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -87)
scale = Vector2(0.175, 0.175)
sprite_frames = SubResource("SpriteFrames_qsu6i")

[node name="EnvironmentCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -48)
shape = SubResource("CapsuleShape2D_7l5o8")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -48)
shape = SubResource("CapsuleShape2D_h6gdc")

[node name="Raycasts" type="Node2D" parent="."]

[node name="GroundDetect" type="RayCast2D" parent="Raycasts"]
position = Vector2(-30, 0)
target_position = Vector2(0, 25)

[node name="WallDetect" type="RayCast2D" parent="Raycasts"]
position = Vector2(-30, -48)
target_position = Vector2(-25, 0)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -77)
shape = SubResource("RectangleShape2D_2gpmj")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -77)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_1l3bk")

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3mmc")
}

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
